# venus-basestation

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
docs/: message-format.md
examples/: sample_messages.jsonl
src/venus_basestation/: __init__.py  __main__.py  dashboard.py  fake_messages.py  io_utils.py  map_state.py  message_schema.py  mqtt_client.py  svg_snapshot.py  tk_dashboard.py
tests/: test_io_utils.py  test_map_state.py  test_message_schema.py  test_svg_snapshot.py  test_tk_dashboard.py
tools/: generate_fake_jsonl.py  replay_jsonl.py
